fixed build pt2